@@ -50,14 +50,17 @@ bot.on("message", message => {
   if (message.author.bot) return;
   //Ignore messages that dont start with the command symbol
   if (!message.content.includes(config.prefix)) return;
-  //establish which emoji to use
-
+  //check to see if bot can send messages on channel
+  if (message.channel.permissionsFor(bot.user).has('SEND_MESSAGES') != true) return;
+  //check to see if external emoji can be used
   if (message.channel.type !== "dm") {
     if (message.channel.permissionsFor(bot.user).has('USE_EXTERNAL_EMOJIS') != true) {
       message.channel.send(`Please enable \'Use External Emoji\' for ${bot.user.username}`);
       return;
     }
   }
+
+
 
   //Seperate and create a list of parameters. A space in the message denotes a new parameter
   if (!message.content.startsWith(config.prefix)) {
